Avoid publication teaser squashing

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
     right: 0;
     font-size: 1.2em;
     background-color: #333; /* Dark background for visibility */
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
+    padding: 0.5rem 0;
     z-index: 1000; /* Ensure navbar is above all other content */
 }
 
@@ -117,14 +118,14 @@
 
 
 .main-heading{
-  font-size: 2.5em;
+  font-size: 2.0em;
   font-weight: bold;
   margin-bottom: 0vw;
   margin-top: -10vw;
 }
 
 .sub-heading{
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: #a0a0a0;
 }
 
@@ -134,7 +135,7 @@
  }
 
 .description-text {
-   font-size: 1.2em;  /* Adjust font size as per preference */
+   font-size: 1.0em;  /* Adjust font size as per preference */
    color: #777;    /* A slightly muted color, but you can use any */
    margin-top: 1vw;  /* Adds a bit of space above the description */
    max-width: 40vw;  /* Limits the width of the text for better readability */
@@ -146,7 +147,7 @@
     text-align: left;
     margin-top: 0vw; /* Adjust as necessary for spacing between the image and the subheading */
     margin-bottom: 0vw;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: #a0a0a0;
     
 }
@@ -167,7 +168,7 @@
 .publication-container {
     display: flex;
     border: 1px solid #ccc; 
-    padding: 1rem;
+    padding: 0.5rem;
     margin-bottom: 1rem;
 }
 
@@ -190,8 +191,12 @@
 
 .publication-teaser {
     width: 150px; /* larger size */
-    height: 150px; /* maintain aspect ratio */
+    height: 150px;
+    /* height: 150px; maintain aspect ratio */
     border-radius: 50%;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
 }
 
 .publication-box-middle {
